# wagtail-starter-kit

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  compose.mysql.override.yaml  compose.postgresql.override.yaml  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: urls.py
app/base/: tests.py
app/base/management/commands/: populate_settings.py
app/blog/: tests.py
app/blog/management/commands/: populate_blog.py
app/home/: tests.py
app/home/management/commands/: create_sample_media.py  populate_homepage.py
app/portfolio/: models.py  tests.py  wagtail_hooks.py
app/portfolio/management/commands/: populate_developer_skills.py  populate_portfolio.py
app/portfolio/migrations/: 0003_developerskill_alter_portfoliopage_body.py
app/portfolio/templates/portfolio/snippets/: developer_skill_index.html  reorder.html
app/search/: tests.py
app/settings/: base.py  dev.py
app/style_guide/: tests.py
app/templates/: base.html
app/templates/wagtailsnippets/snippets/portfolio/developerskill/: index.html
docs/: backend-development.md  frontend-development.md  management-commands.md
static_src/js/: app.js
