[project]
name = "wagtail-starter-kit"
version = "0.1.0"
description = "Full Stack Wagtail Starter Kit"
authors = [{name = "nickmoreton", email = "nickmoreton@me.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django~=5.2",
    "django-browser-reload~=1.21",
    "wagtail~=7.2",
]

[tool.uv]
dev-dependencies = [
    "black",
    "coverage",
    "django-upgrade",
    "flake8",
    "isort",
    "pre-commit",
    "pyupgrade",
]
